# new-settings

./: .gitignore  CMakeLists.txt  README.md  YoyoSettingsConfig.cmake.in
app/: CMakeLists.txt
app/src/: application.cpp  application.h  com.yoyo.SettingsUI.xml  main.cpp  qtpluginsmanager.cpp  qtpluginsmanager.h
app/src/qml/: IconButton.qml  IconCheckBox.qml  ItemPage.qml  RoundedItem.qml  Scrollable.qml  SideBar.qml  StandardButton.qml  StandardItem.qml  main.qml  qml.qrc
debian/: files  yoyo-settings.install  yoyo-settings.substvars
include/yoyo-settings/: dataObject.h  interfaceplugin.h  pluginMetaData.h
plugins/: CMakeLists.txt
plugins/Appearance/: CMakeLists.txt  appearance.cpp  appearance.h  appearanceplugin.cpp  appearanceplugin.h  appearanceplugin.json  fontsmodel.cpp
plugins/Appearance/qml/: DesktopPreview.qml  appearance.qml  qml.qrc  wallpaper.qml
plugins/Display/: CMakeLists.txt  displayplugin.cpp  displayplugin.h
plugins/Display/qml/: Main.qml  RotationButton.qml  qml.qrc
plugins/Network/: CMakeLists.txt  networkplugin.cpp  networkplugin.h  networkplugin.json
plugins/Network/qml/: qml.qrc
plugins/Network/qml/bluetooth/: Main.qml  PairDialog.qml
plugins/Network/qml/network/: ConnectDialog.qml  Main.qml  NewNetworkDialog.qml  WifiItem.qml  WifiView.qml  WiredItem.qml  WirelessDetailsDialog.qml
plugins/Network/qml/proxy/: Main.qml
plugins/Network/qml/wired/: Main.qml  WiredItem.qml
plugins/Network/qml/wlan/: Main.qml  WifiItem.qml  WifiView.qml
plugins/System/: CMakeLists.txt  defaultapplications.cpp  systemplugin.cpp  systemplugin.h  systemplugin.json
plugins/System/cmake/: FindLibcrypt.cmake
plugins/System/cursor/: cursortheme.cpp
plugins/System/qml/: LanguagePage.qml  qml.qrc
plugins/System/qml/Accessibility/: Main.qml
plugins/System/qml/Battery/: BatteryItem.qml  HistoryGraph.qml  Main.qml
plugins/System/qml/Cursor/: Main.qml
plugins/System/qml/DateTime/: Main.qml  TimeZoneDialog.qml
plugins/System/qml/DefaultApp/: AppComboBox.qml  Main.qml
plugins/System/qml/Notification/: Main.qml
plugins/System/qml/Power/: Main.qml
plugins/System/qml/Sound/: Main.qml
plugins/System/qml/Touchpad/: Main.qml
plugins/System/qml/User/: Main.qml  UserDelegateItem.qml
plugins/demoA/: CMakeLists.txt  demoA.json  demoa.cpp  demoa.h  test.h
plugins/demoA/qml/: main.qml  qml.qrc
plugins/demoB/: CMakeLists.txt  demob.cpp  demob.h  test.h
plugins/demoB/qml/: main2.qml  qml.qrc
translations/: yoyo-settings_zh_CN.ts
